workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_add_request_command__new_events.snap
---
source: workspaces/optic-engine-native/src/commands/endpoint.rs
expression: new_events
---
[
    RequestAdded(
        RequestAdded {
            request_id: "request_2",
            path_id: "path_1",
            http_method: "POST",
            event_context: None,
        },
    ),
]
